make sure class names match

--- a/application/src/kv/login.kv
+++ b/application/src/kv/login.kv
@@ -1,4 +1,4 @@
-<UserLogin>
+<Login>
 	name:userName                #for python code : for kivy code
 	password:userPassword        #for python code : for kivy code
 	email:userEmail              #for python code : for kivy code
