changing class name in itemshare.kv to match

--- a/application/src/kv/itemshare.kv
+++ b/application/src/kv/itemshare.kv
@@ -1,4 +1,4 @@
-<ShareItems>:
+<ItemShare>:
 
 	itemName:itemName                #for python code : for kivy code
 	shareWith:shareWith        		 #for python code : for kivy code
