Updated itemshare py kv test

--- a/application/src/kv/itemshare.kv
+++ b/application/src/kv/itemshare.kv
@@ -26,7 +26,7 @@
 		Button:
             text: 'Send Notification'
             on_press: root.manager.current = 'homescreen'
-			#function call to notifications
+			#on_press: root.shareItems()
 		
 		Button:
             text: 'Back To Home'
