Updated Login py kv test

--- a/application/src/kv/login.kv
+++ b/application/src/kv/login.kv
@@ -1,7 +1,7 @@
 <Login>
-	name:userName                #for python code : for kivy code
-	password:userPassword        #for python code : for kivy code
-	email:userEmail              #for python code : for kivy code
+	userName:userName                #for python code : for kivy code
+	userPassword:userPassword        #for python code : for kivy code
+	userEmail:userEmail              #for python code : for kivy code
 	GridLayout:
 		cols:1
 		size: root.width, root.height
