Updated Recipes py kv test

--- a/application/src/kv/recipes.kv
+++ b/application/src/kv/recipes.kv
@@ -50,7 +50,7 @@
 		Button:
 			text:"Enter"
 			#on_press: root.manager.current = 'homescreen' 
-			#on_press: root.userLogin()    send data to a function
+			#on_press: root.userRecipe()    send data to a function
 			
 		Button:
             text: 'Back To Home'
