Updated ShoppingList py kv test

--- a/application/src/kv/shoppinglist.kv
+++ b/application/src/kv/shoppinglist.kv
@@ -7,3 +7,6 @@
             on_press: root.manager.current = 'homescreen'
 		
 	#function call
+	#add items button
+	#edit items button
+	#delete items button
