--- a/application/src/kv/login.kv
+++ b/application/src/kv/login.kv
@@ -31,5 +31,5 @@
 			
 		Button:
 			text:"Login"
-			on_press: root.manager.current = 'homescreen' 
-			#on_press: root.Login()    to check the login credentials
+			#on_press: root.manager.current = 'homescreen' 
+			on_press: root.userLogin()    #to check the login credentials
