--- a/application/src/kv/login.kv
+++ b/application/src/kv/login.kv
@@ -29,7 +29,7 @@
 			TextInput:
 				id: userPassword
 				multiline: False
-				password: True
+				#password: True
 				pos_hint: {"x": 0.45 , "top":0.9}
 				size_hint: 0.4, 0.15
 			
