--- a/application/src/kv/inventory.kv
+++ b/application/src/kv/inventory.kv
@@ -1,26 +1,42 @@
 <Inventory>:
-	BoxLayout:
-        orientation: 'vertical'
+	#<FloatLayout>:
+	Button:
+		text: "<-"
+		font_size: 20
+		color: 1,0,0,1
+		size_hint: 0.1, 0.1
+		pos_hint:{'x': 0, 'top': 1}
+		on_press: root.manager.current =  'homescreen'
 		
-		Button:
-            text: 'Add Item'
-            on_press: root.manager.current = 'additem'
-			
-		Button:
-            text: 'Delete Item'
-            on_press: root.manager.current = 'deleteitem'
-			
-		Button:
-            text: 'View Inventory'
-            on_press: root.manager.current = 'viewinventory'
-			
-		Button:
-            text: 'Search'
-            on_press: root.manager.current = 'searchitem'
-			
-		Button:
-            text: 'Back To Home'
-            on_press: root.manager.current = 'homescreen'
+	TextInput:
+		id: search
+		size_hint: 0.8, 0.1
+		pos_hint:{'x': 0.1, 'top': 1}
+	
+	Button:
+		text: "Search"
+		font_size: 20
+		size_hint: 0.1, 0.1
+		pos_hint:{'x': .9, 'top': 1}
+		on_press: root.SearchItem()
+		
+	Button:
+		text: "Add Item"
+		font_size: 20
+		color: 0,1,0,1
+		size_hint: 1, 0.1
+		on_press: root.manager.current = 'additem'
+
+	ScrollView:
+		do_scroll_x: False
+		do_scroll_y: True
+		size_hint: 1, 0.8
+		pos_hint:{'x': 0, 'y': 0.1}
+
+		GridLayout:
+			id: items
+			cols: 1
+			size_hint_y: None
 
 <AddItem>:
 
