--- a/application/src/kv/login.kv
+++ b/application/src/kv/login.kv
@@ -5,37 +5,55 @@
 	GridLayout:
 		cols:1
 		size: root.width, root.height
-		padding: [20]
+		padding: [30]
+		spacing: [5,5]
+
 		GridLayout:
-			cols:2
+			cols:1
 			padding: [20, 30, 40, 50]
 		
-			Label:
-				text: "Username: "
-				pos_hint: {"x":0.1, "top":0.9}
-				size_hint: 0.35, 0.15
+		Label:
+		    text: "The Perfect Larder"
+		    font_size: 30
 				
-			TextInput:
-				id: userName
-				multiline: False
-				pos_hint: {"x": 0.45 , "top":0.9}
-				size_hint: 0.4, 0.15
+		TextInput:
+
+			id: userName
+			center_x: (root.width/2)
+            top: (root.top/2)+ 100
+            hint_text: "username"
+            #ize: 250, 35
+            max_lines: 1
+            valign: 'middle'
+            halign: 'center'
+            font_size: 15
+			multiline: False
+			pos_hint: {"x": 0.45 , "top":0.9}
+			size_hint: 0.4, 0.2
 				
-			Label:
-				text: "Password: "
-				pos_hint: {"x":0.1, "top":0.9}
-				size_hint: 0.35, 0.15
-				
-			TextInput:
-				id: userPassword
-				multiline: False
-				password: True
-				pos_hint: {"x": 0.45 , "top":0.9}
-				size_hint: 0.4, 0.15
+		TextInput:
+			id: userPassword
+			center_x: (root.width/2)
+            top: (root.top/2)+ 100
+            hint_text: "password"
+            size: 250, 35
+            max_lines: 1
+            valign: 'middle'
+            halign: 'center'
+            font_size: 15
+			multiline: False
+			password: True
+			pos_hint: {"x": 0.45 , "top":0.9}
+			size_hint: 0.4, 0.2
 			
 		Button:
+
 			pos_hint:{"x":0.2,"y":0.05}
 			size_hint: 0.6, 0.2
 			text:"Login"
 			#on_press: root.manager.current = 'homescreen' 
 			on_press: root.userLogin()    #to check the login credentials
+
+		Label:
+		    text: "Create Account"
+		    font_size: 13
