--- a/application/src/kv/login.kv
+++ b/application/src/kv/login.kv
@@ -4,32 +4,33 @@
 
 	GridLayout:
 		cols:1
-		size: root.width, root.height
+		size: root.width, root.height * 0.7
 		padding: [30]
 		spacing: [5,5]
 
 		GridLayout:
 			cols:1
 			padding: [20, 30, 40, 50]
+			
 		
 		Label:
 		    text: "The Perfect Larder"
 		    font_size: 30
 				
 		TextInput:
-
+			height: 100
 			id: userName
 			center_x: (root.width/2)
             top: (root.top/2)+ 100
             hint_text: "username"
-            #ize: 250, 35
+            #size: 250, 35
             max_lines: 1
             valign: 'middle'
             halign: 'center'
             font_size: 15
 			multiline: False
-			pos_hint: {"x": 0.45 , "top":0.9}
-			size_hint: 0.4, 0.2
+			#pos_hint: {"x": 0.45 , "top":0.9}
+			size_hint: (0.4, 0.32)
 				
 		TextInput:
 			id: userPassword
@@ -44,16 +45,21 @@
 			multiline: False
 			password: True
 			pos_hint: {"x": 0.45 , "top":0.9}
-			size_hint: 0.4, 0.2
+			size_hint: 0.4, 0.32
 			
 		Button:
-
 			pos_hint:{"x":0.2,"y":0.05}
-			size_hint: 0.6, 0.2
+			size_hint: 0.6, 0.3
 			text:"Login"
 			#on_press: root.manager.current = 'homescreen' 
 			on_press: root.userLogin()    #to check the login credentials
-
+			
+		GridLayout:
 		Label:
-		    text: "Create Account"
-		    font_size: 13
+			text: "Don't have an account?"
+			font_size: 15
+		Button:
+			size_hint: 0.4, 0.31
+			#pos_hint:{"x":0,"y":0.05}
+			text: "Create Account"
+			font_size: 13
