Started work on sign up page.  Re-worded log-in page buttons a smidge

--- a/application/src/kv/login.kv
+++ b/application/src/kv/login.kv
@@ -58,13 +58,13 @@
 			
 		GridLayout:
 		Label:
-			text: "Don't have an account?"
+			text: "Want your own Perfect Larder?"
 			font_size: 15
 		Button:
 			size_hint: 0.4, 0.31
 			#pos_hint:{"x":0,"y":0.05}
-			text: "Create Account"
-			font_size: 13
+			text: "Create an Account"
+			font_size: 15
 			on_press: 
 				root.manager.transition.direction = 'left'
 				root.manager.current ='signup'
