added get recipe screen

--- a/application/src/kv/recipes.kv
+++ b/application/src/kv/recipes.kv
@@ -58,4 +58,29 @@
 		
 
 <GetRecipe>:
-		# go to to function and pull recipes
+	Button:
+		text: "<-"
+		font_size: 20
+		color: 1,0,0,1
+		size_hint: 0.1, 0.1
+		pos_hint:{'x': 0, 'top': 1}
+		on_press: root.manager.current =  'homescreen'
+        
+    Label:
+		text: "Recommended Recipes"
+		font_size: 20
+		size_hint: 0.8, 0.1
+		pos_hint:{'x': 0.1, 'top': 1}
+        
+    ScrollView:
+		do_scroll_x: False
+		do_scroll_y: True
+		size_hint: 1, 0.8
+		pos_hint:{'x': 0, 'y': 0.1}
+
+		GridLayout:
+			id: recipes
+			cols: 1
+			size_hint_y: None
+            height: self.minimum_height
+            row_default_height: 35
