--- a/application/src/kv/main.kv
+++ b/application/src/kv/main.kv
@@ -7,7 +7,7 @@
 		
 		Button:
             text: 'Recipes'
-            on_press: root.manager.current = 'recipes'
+            on_press: root.manager.current = 'getrecipes'
 			
 		Button:
             text: 'Inventory'
