add recipes now works correctly

--- a/application/src/kv/recipes.kv
+++ b/application/src/kv/recipes.kv
@@ -223,8 +223,8 @@
             on_press: root.manager.current = 'addrecipe'
             
         Button:
-            text: "Get A Recipe"
-            on_press: root.manager.current = 'getrecipes'
+            text: "Get A Reccomended Recipe"
+            on_press: root.manager.current = 'getreccrecipes'
             
         Button:
             text: "Back To Home Screen"
