--- a/application/src/kv/recipes.kv
+++ b/application/src/kv/recipes.kv
@@ -1,19 +1,3 @@
-<Recipes>:
-	BoxLayout:
-        orientation: 'vertical'
-		
-		Button:
-            text: 'Personal Recipes'
-            on_press: root.manager.current = 'persoanlrecipes'
-		
-		Button:
-            text: 'Get Recipes'
-            on_press: root.manager.current = 'getrecipes'
-		
-		Button:
-            text: 'Back To Home'
-            on_press: root.manager.current = 'homescreen'		
-
 <AddRecipe>:
 	Button:
 		text: "<-"
@@ -21,7 +5,7 @@
 		color: 1,0,0,1
 		size_hint: 0.1, 0.1
 		pos_hint:{'x': 0, 'top': 1}
-		on_press: root.manager.current =  'recipes'
+		on_press: root.manager.current =  'personalrecipe'
         
     Label:
 		text: "Add Personal Recipe"
@@ -177,8 +161,8 @@
     GridLayout:
         cols:1
         Button:
-            text: "Add Recipe"
-            on_press: root.manager.current = 'addrecipe'
+            text: "Personal Recipes"
+            on_press: root.manager.current = 'personalrecipe'
             
         Button:
             text: "Get A Reccomended Recipe"
@@ -189,35 +173,70 @@
             on_press: root.manager.current = 'homescreen'
             
 <PersonalRecipe>:
-        GridLayout:
-            cols:2
-            Button:
-                text: "<-"
-                font_size: 20
-                color: 1,0,0,1
-                size_hint: 0.1, 0.1
-                pos_hint:{'x': 0, 'top': 1}
-            Label:
-                text: "Personal Recipes"
-                font_size: 20
-                size_hint: 0.8, 0.1
-                pos_hint:{'x': 0.1, 'top': 1}
-            ScrollView:
-                do_scroll_x: False
-                do_scroll_y: True
-                size_hint: (.98, 0.815)
-                pos_hint:{'x': 0.01, 'top': 0.93}
+    #GridLayout:
+        #cols:2
+    Button:
+        text: "<-"
+        font_size: 20
+        color: 1,0,0,1
+        size_hint: 0.1, 0.1
+        pos_hint:{'x': 0, 'top': 1}
+        on_press: root.manager.current = 'recipes'
+    Label:
+        text: "Personal Recipes"
+        font_size: 20
+        size_hint: 0.8, 0.1
+        pos_hint:{'x': 0.1, 'top': 1}
+            
+    ScrollView:
+        do_scroll_x: False
+        do_scroll_y: True
+        size_hint: (.98, 0.815)
+        pos_hint:{'x': 0.01, 'top': 0.9}
 
-                GridLayout:
-                    id: personalrecipe
-                    cols: 1
-                    size_hint_y: None
-                    height: self.minimum_height
-                    row_default_height: 35
-            Button:
-                text: "Add Recipe"
-                size_hint: 1, 0.1
-                on_press: root.manager.current = 'addrecipe'
+        GridLayout:
+            id: personalrecipe
+            cols: 1
+            size_hint_y: None
+            height: self.minimum_height
+            row_default_height: 35
+    Button:
+        text: "Add Recipe"
+        size_hint: 1, 0.1
+        on_press: root.manager.current = 'addrecipe'
            
-                
+<ViewPersonalRecipe>:
+    GridLayout:
+        cols:1
+        Label:
+            id: name
+        
+        ScrollView:
+            do_scroll_x: False
+            do_scroll_y: True
+            
+            GridLayout:
+                cols:1
+                id: ingredients
+                size_hint_y: None
+                height: self.minimum_height
+                row_default_height: 35
+            
+        Label:
+            id: instructions
+            text_size: self.size
+            
+        Label:
+            id: servings
+    Button:
+		text: "<-"
+		font_size: 20
+		color: 1,0,0,1
+		size_hint: 0.1, 0.1
+		pos_hint:{'x': 0, 'top': 1}
+		on_press: root.manager.current =  'personalrecipe'
+    Button:
+        text: 'Delete'
+        size_hint: 1, 0.1
+        on_press: root.deleteRecipe()
            
